Revert "Fix user menu button z-index to ensure clickability"

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -439,11 +439,6 @@ body::before {
     font-weight: 600;
 }
 
-#user-menu-btn {
-    position: relative;
-    z-index: 1003;
-}
-
 .user-menu {
     position: absolute;
     bottom: 100%;
